# Ame

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  Setup.ps1  configure.ps1  vcpkg.json  xmake.lua
Source/: CMakeLists.txt  xmake.lua
Source/Application/Private/Application/: Application.cpp
Source/Application/Public/Application/: Application.hpp  Config.hpp  EntryPoint.hpp
Source/Core/: xmake.lua
Source/Core/Application/: xmake.lua
Source/Core/Engine/: xmake.lua
Source/Core/Private/Core/: Allocator.cpp  Coroutine.cpp  FrameTimer.cpp  Guid.cpp  Interface.cpp  Module.cpp  String.cpp  UId.cpp
Source/Core/Private/Log/: Logger.cpp  LoggerImpl.cpp
Source/Core/Private/Math/: Camera.cpp  Matrix.cpp  Plane.cpp  Vector.cpp
Source/Core/Private/Module/: ModuleRegistry.cpp
Source/Core/Private/Plugin/: InterfaceContext.hpp  ModuleRegistryImpl.cpp  ModuleRegistryImpl.hpp  Plugin.cpp  PluginContext.cpp  PluginContext.hpp  PluginHostImpl.cpp  PluginHostImpl.hpp
Source/Core/Public/: String.hpp
Source/Core/Public/Core/: Allocator.hpp  Ame.Debug.hpp  Ame.hpp  BufferBlob.hpp  Coroutine.hpp  Enum.hpp  Export.hpp  FrameTimer.hpp  Guid.hpp  Hash.hpp  Interface.hpp  Serializable.hpp  Signal.hpp  String.hpp  Version.hpp
Source/Core/Public/FileSystem/: Path.hpp  Utils.hpp
Source/Core/Public/Log/: Core.hpp  Logger.hpp  Stream.hpp  Wrapper.hpp
Source/Core/Public/Math/: Camera.hpp  Colors.hpp  Common.hpp  Matrix.hpp  Plane.hpp  Ray.hpp  Rect.hpp  Size2.hpp  Transform.hpp  Util.hpp  Vector.Impl.hpp  Vector.hpp
Source/Core/Public/Module/: Module.hpp  ModuleRegistry.hpp  Submodule.hpp
Source/Core/Public/Plugin/: ModuleRegistry.hpp  Plugin.hpp  PluginHost.hpp
Source/Core/Public/Util/: Crypto.hpp
Source/Editor/: xmake.lua
Source/Editor/AmeEditor/: AmeEditor.csproj
Source/Editor/AmeEditor/Application/: EditorApplication.cs
Source/Editor/AmeEditor/Config/: EditorConfig.cs
Source/Editor/AmeEditor/EditorWindow/: IEditorWindow.cs
Source/Editor/AmeEditor/Runtime/: Program.cs
Source/Editor/AmeEditorCore/: AmeEditorCore.csproj  Class1.cs
Source/Editor/AmeEditorCore/EditorWindow/: IEditorWindow.cs
Source/Editor/CSharpUnused/AmeEditor/: AmeEditor.csproj
Source/Editor/CSharpUnused/AmeEditorCore/: AmeEditorCore.csproj
Source/Editor/EditorApplication/: xmake.lua
Source/Editor/EditorCore/: xmake.lua
Source/Editor/EditorPlugin/: xmake.lua
Source/EditorApplication/Private/Editor/: EditorApplication.cpp  Main.cpp
Source/EditorApplication/Public/Editor/: Config.hpp  EditorApplication.hpp
Source/EditorPlugin/Private/EditorPlugin/: EditorWindowManagerImpl.ImGui.cpp  EditorWindowManagerImpl.cpp  EditorWindowManagerImpl.hpp
Source/EditorPlugin/Public/EditorPlugin/: EditorWindow.hpp  EditorWindowManager.hpp  EditorWindowManagerDesc.hpp
Source/Engine/Private/Asset/: Manager.cpp  MetaData.cpp  Pack.cpp  Storage.Asset.cpp  Storage.cpp
Source/Engine/Private/Core/: AbstractStorage.Export.cpp  Allocator.cpp  Ame.Debug.cpp  Coroutine.cpp  Interface.Export.cpp  Signal.Export.cpp  String.cpp
Source/Engine/Private/Ecs/: World.cpp
Source/Engine/Private/EcsModule/: CoreModule.cpp  MathModule.cpp  Renderable3DModule.cpp  RenderableModule.cpp  SceneModule.cpp
Source/Engine/Private/Engine/: Config.cpp  Engine.Export.cpp  Engine.cpp
Source/Engine/Private/EntityCompositor/: Drawer.cpp
Source/Engine/Private/ImGuiUtils/: Core.cpp
Source/Engine/Private/Image/: FreeImageUtils.cpp  FreeImageUtils.hpp  ImageStorage.cpp
Source/Engine/Private/Log/: Logger.Export.cpp  LoggerImpl.cpp  LoggerImpl.hpp  Stream.Export.cpp  Stream.cpp  Utils.hpp
Source/Engine/Private/Math/: Plane.cpp
Source/Engine/Private/Plugin/: ModuleRegistry.cpp  (+7 more)
Source/Entity/Private/: Entity.cpp  Modules.cpp  World.cpp
Source/Examples/: CMakeLists.txt  xmake.lua
Source/Examples/HelloWorld/: xmake.lua
Source/Examples/PluginExample/: xmake.lua
Source/Examples/PluginHost/: xmake.lua
Source/Examples/SimpleRhi/: xmake.lua
Source/Examples/SimpleWindow/: xmake.lua
Source/Scripting/: xmake.lua
Source/Scripting/AmeSharp/: AmeSharp.sln  xmake.lua
Source/Scripting/AmeSharp.Runtime/: xmake.lua
Source/Scripting/CSharpRuntime/: AmeSharp.Runtime.sln  AmeSharp.sln
Source/Scripting/CSharpSample/: CSharpSample.sln
Source/Tools/: xmake.lua
Source/Tools/GZipCompressToC/: xmake.lua
(+1477 files in other folders)
